test/should_fail/enum_012.grg
using enum_model_006;

rule r {
	pattern {
	}
	replace {
	}
}



